--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "npm": "8.19.4"
   },
   "scripts": {
-    "start": "node server --ignore client",
+    "start": "npm run seed && node server --ignore client",
     "develop": "concurrently \"cd server && npm run start\" \"cd client && npm start\"",
     "install": "cd server && npm i && cd ../client && npm i",
     "seed": "cd server && npm run seed",
